# fast-PCA

./: .gitignore  README.md
benchmarks/: CMakeLists.txt  Makefile  mybenchmark  mybenchmark.cpp
data/: data.csv  data2.csv
fast-PCA/: CMakeLists.txt  Makefile  fast-PCA.cpp  fast-PCA.h  fast_pca.cpp  fast_pca.h  main.cpp  svd  svd.cpp
